fix: css bleed, hide routes/links if user null

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -96,9 +96,9 @@ h5 {
     width: 100%;
     height: 34px;
     position: sticky;
-    top: 0;
+    top: -1px;
     background-color: #111;
-    padding: 0 8px;
+    padding: 0;
 }
 #menu input {
     color: #bbb;
@@ -159,7 +159,7 @@ h5 {
     overflow-y: auto;
 }
 #view {
-    padding: 10px 10px;
+    padding: 10px 6px;
 }
 
 /**
@@ -206,7 +206,7 @@ label:focus,
  * Track Row
  */
 .track-row {
-    margin-bottom: 4px;
+    margin-bottom: 6px;
     transition: background-color 0.2s;
     width: 100%;
 }
@@ -216,11 +216,13 @@ label:focus,
 .track-row .cover {
     border-radius: 5px;
     height: 40px;
+    width: 40px;
 }
 .track-row #title {
     font-weight: bold;
     font-size: 0.8rem;
     max-width: 90%;
+    color: #ddd;
 }
 .track-row #artist {
     font-size: 0.7rem;
@@ -235,6 +237,7 @@ label:focus,
     font-size: 0.9rem;
     background: none;
     border: 0;
+    margin-right: 5px;
 }
 
 .track-row .play-button svg {
@@ -292,6 +295,7 @@ label:focus,
     max-width: 150px;
 }
 #player #title {
+    color: #ddd;
     font-weight: bold;
     font-size: 0.8rem;
 }
